Add retrofit executor, use vavr list